--- a/templets/index.html
+++ b/templets/index.html
@@ -11,7 +11,7 @@
                     alert("Please enter valid prices for all fields.");
                     return;
                 }
-                prices.push(price);
+                prices.push(price); requirements.txt
             }
             
             fetch('/predict', {
